# opentalking

./: .baseline-pytest.txt  .baseline-ruff.txt  .env.example  .gitignore  .refactor-import-map.txt  Makefile  README.en.md  README.md  README.zh.md  V100数字人部署完整指南.md  docker-compose.gpu.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml
.refactor-stash/: bailian_clone.py
apps/api/: main.py
apps/api/routes/: agent.py  avatars.py  health.py  memory.py  models.py  runtime_config.py  sessions.py  tts_preview.py  video_creation.py  voices.py
apps/api/schemas/: avatar.py  session.py
apps/api/services/: session_service.py
apps/api/tests/: test_agent_knowledge.py  test_config.py  test_custom_avatars.py  test_health.py  test_light2d_avatar.py  test_memory_api.py  test_models.py  test_openai_compatible_audio.py  test_sessions.py  test_sessions_provider_key_gate.py  test_tts_preview.py  test_video_creation.py  test_voice_labels.py
apps/cli/: doctor.py  prepare_cache.py  quicktalk_multiface.py
apps/homepage/: README.md  homepage_server.py
apps/homepage/src/: App.tsx  locales.ts
apps/unified/: main.py
apps/web/: package-lock.json  package.json
apps/web/src/: App.tsx
apps/web/tests/: audio.test.ts  avatarSelection.test.ts  config.test.ts  modelLabels.test.ts
configs/: default.yaml
configs/inference/: omnirt.yaml
configs/profiles/: ascend-910b.yaml  cpu-demo.yaml  cuda-3090.yaml  cuda-4090.yaml
configs/synthesis/: flashtalk.yaml  musetalk.yaml  wav2lip.yaml
deploy/compose/: docker-compose.cuda.yml  docker-compose.dev.yml
docs/: 2026-05-07-architecture-refactor-plan.md  2026-05-09-wav2lip-architecture-v2-integration.md  2026-05-monthly-roadmap.md  architecture-review.md  architecture.md  avatar-format.md  configuration.md  quickstart.md  realtime-digital-human-research.md
docs/en/: index.md
docs/zh/: faq.md  index.md
latest/: 404.html  index.html  sitemap.xml
latest/api-reference/: index.html
latest/avatar_models/: index.html
latest/benchmark/: index.html
latest/cases/: index.html
latest/community/: index.html
latest/deployment/: index.html
latest/docs/: index.html
latest/en/: index.html
latest/examples/: index.html
latest/faq/: index.html
latest/model-deployment/: index.html
latest/model-support/: index.html
latest/quick-start/: index.html
latest/recipes/: index.html
latest/reference/: index.html
latest/search/: search_index.json
latest/speech_models/: index.html
latest/tutorials/: index.html
latest/usage/: index.html
main/: 404.html  index.html  sitemap.xml
main/api-reference/: index.html
main/benchmark/: index.html
main/cases/: index.html
main/community/: index.html
main/docs/: index.html
main/en/: index.html
main/examples/: index.html
main/faq/: index.html
main/model-deployment/: index.html
main/model-support/: index.html
main/quick-start/: index.html
main/reference/: index.html
main/search/: search_index.json
main/tutorials/: index.html
main/usage/: index.html
opentalking/: export_store.py  video_creation.py
opentalking/agent/: __init__.py  context_builder.py  knowledge_index.py  knowledge_store.py  memory_store.py  prompt.py
opentalking/avatar/: duo_dialog.py  light2d.py  mouth_metadata.py  validator.py  wav2lip_config.py  wav2lip_preload.py
opentalking/core/: config.py  model_config.py
opentalking/events/: __init__.py  emitter.py
opentalking/media/: frame_avatar.py
opentalking/models/: registry.py
opentalking/runtime/: main.py  task_consumer.py  timing.py
opentalking/voice/: __init__.py  store.py
reports/: local-audio-benchmark-146.md  local-audio-e2e-146.md
scripts/: benchmark_opentalking_e2e.py  detect_hardware.sh  down.sh  download_flashtalk.sh  download_local_audio_models.py  ensure_omnirt.sh  install.sh  install_docker.sh  install_native.sh  local_cosyvoice_service.py  local_indextts_service.py  local_qwen3_tts_service.py  prepare_musetalk_avatar_asset.py  prepare_wav2lip_image_asset.py  prepare_wav2lip_video_asset.py  run_omnirt.sh  start_unified.sh  up.sh
scripts/quickstart/: _helpers.sh  configure_omnirt_endpoint.sh  env.example  prepare_local_musetalk.sh  start_all.sh  start_frontend.sh  start_mock.sh  start_omnirt_flashtalk.sh  start_omnirt_quicktalk.sh  start_omnirt_wav2lip.sh  start_opentalking.sh  status.sh  stop_all.sh
tests/fixtures/: light2d_audio_cases.json
tests/frontend/: test_asset_library_knowledge.py  test_default_model_selection.py  test_knowledge_base_adaptation.py  test_light2d_mock_ui.py  test_quicktalk_send_path.py  test_video_creation_duo_dialog.py  test_video_creation_reference_video.py
tests/unit/: test_agent_memory.py  test_aiortc_adapter.py  test_audio2video_client.py  test_avatar_model_compat.py  test_edge_tts_adapter.py  test_edge_voice_normalization.py  test_env_hard_switch.py  test_export_store.py  test_flashhead_http_client.py  test_flashtalk_ws_client_init.py  test_light2d_renderer.py  test_local_audio_frontend.py  test_local_audio_providers.py  test_memory_provider.py  test_mock_flashtalk_client.py  test_model_config.py  test_omnirt_url.py  test_prepare_cache_cli.py  test_provider_registration.py  test_quickstart_env.py  test_quicktalk_adapter.py  test_quicktalk_multiface.py  test_quicktalk_paths.py  test_reference_frame_resize.py  test_registry.py  test_render_pipeline.py  test_smoke.py  test_task_consumer.py  test_tts_factory.py  test_voice_store.py  test_wav2lip_adapter.py  test_wav2lip_local_cache.py  test_wav2lip_metadata.py  test_wav2lip_preload.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/api-reference/: index.html
v0.1.0/benchmark/: index.html
v0.1.0/cases/: index.html
v0.1.0/community/: index.html
v0.1.0/docs/: index.html
v0.1.0/en/: index.html
v0.1.0/examples/: index.html
v0.1.0/faq/: index.html
v0.1.0/model-deployment/: index.html
v0.1.0/model-support/: index.html
v0.1.0/quick-start/: index.html
v0.1.0/reference/: index.html
v0.1.0/search/: search_index.json
v0.1.0/tutorials/: index.html
v0.1.0/usage/: index.html
(+1182 files in other folders)
